tests/miniJava/neg/006730_mutation.MiniJava
class java { public int [] java ; static void Main ( String [ ] java ) { { } } }
